# pyroll-roux-spreading

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: roux_spreading.py
pyroll-core/docs/: cli.md
pyroll/roux_spreading/: hookimpls.py  hookspecs.py
pyroll_roux_spreading/: __init__.py  hookimpls.py  hookspecs.py
roux_spreading/: __init__.py  hookimpls.py
tests/: config.yaml  test_solve.py  test_solve3.py
